# packages/sight-backend/src/routes/index.route.ts
@@ -1,8 +1,9 @@
 import Route from '@interfaces/routes.interface';
 import { Router } from 'express';
 import IndexController from '@controllers/index.controller';
-import { authMiddleware } from '@middlewares';
+import { authMiddleware, validationMiddleware } from '@middlewares';
 import { wrapRouteHandler } from '@utils/util';
+import { ChangeUserLanguageDto } from '@dtos/users.dto';
 
 class IndexRoute implements Route {
   public path = '/';
@@ -17,6 +18,7 @@ class IndexRoute implements Route {
     this.router.get('/version', wrapRouteHandler(this.indexController.getVersion));
     this.router.get('/me', authMiddleware, wrapRouteHandler(this.indexController.me));
     this.router.get('/motd', wrapRouteHandler(this.indexController.motd));
+    this.router.put('/language', authMiddleware, validationMiddleware(ChangeUserLanguageDto), wrapRouteHandler(this.indexController.setLanguage));
   }
 }
 
